--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "01-graphql-course",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon -r sucrase/register src/index.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +22,13 @@
   "dependencies": {
     "apollo-server": "^3.13.0",
     "graphql": "^16.11.0"
+  },
+  "devDependencies": {
+    "eslint": "^9.35.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "nodemon": "^3.1.10",
+    "prettier": "^3.6.2",
+    "sucrase": "^3.35.0"
   }
 }
